name:                Stuff
version:             0.1.0.0
synopsis:            Random code
description:         Random code
homepage:            https://github.com/jccampagne/Stuff#readme
license:             BSD3
license-file:        LICENSE
author:              Jean-Charles Campagne
maintainer:          Jean-Charles Campagne
copyright:           2017 Jean-Charles Campagne
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    build-depends:   base
    exposed-modules:  Quaternion
    hs-source-dirs:  src
    build-depends:   base

test-suite test
    type: detailed-0.9
    hs-source-dirs: test
    test-module: Test.TestQuaternion
    build-depends: base
                 , hspec
                 , Cabal

executable Stuff
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
